# server-comparison

./: .dockerignore  .gitignore  Makefile  README.md  test_data.json
benchmark/: go.mod  go.sum  main.go
benchmark/chart/: barchart.go  chart.go
benchmark/cmd/: report.go  root.go  run.go  wrk.go
benchmark/job/: job.go  recorder.go  result.go  states.go
benchmark/job/docker/: docker.go  interface.go  stats.go
benchmark/report/: fs.go
benchmark/reporter/: latency.go  memory.go  report.go  throughput.go
benchmark/runner/: joblist.go  options.go  run.go
benchmark/utils/: fs.go  json.go
benchmark/wrk/: client.go  runner.go  server.go
benchmark/wrk/convert/: convert.go  convert_test.go  extract.go  matrix.go  units.go
benchmark/wrk/types/: params.go  result.go
go_fasthttp/: Dockerfile  go.mod  go.sum  main.go
go_std/: Dockerfile  go.mod  main.go
node_express/: Dockerfile  index.js  package-lock.json  package.json
node_fastify/: Dockerfile  index.js  package-lock.json  package.json
reports/2020-11-28_dummy/_raw/: go_fasthttp.json  go_std.json  node_express.json  node_fastify.json  rust_actix.json
reports/2020-12-03T18:27:22Z/: average_latency.json  peak_memory_usage_in_mb.json  throughput.json
reports/2020-12-03T18:27:22Z/_raw/: go_fasthttp.json  go_std.json  node_express.json
reports/2020-12-03T18:27:22Z/measurements/: node_fastify.json  rust_actix.json
rust_actix/: Cargo.toml  Dockerfile
rust_actix/src/: main.rs
