[package]
name = "rust_actix"
version = "0.1.0"
authors = ["David Karolyi <davidkarolyi96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }